# comfyx

./: .clang-format  .editorconfig  .gitignore  .gitmodules  App.xaml  App.xaml.cs  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  ComfyX.csproj  LICENSE  MainWindow.xaml  MainWindow.xaml.cs  README.md
.github/workflows/: build.yml  release.yml
Dialogs/: LicenseDialog.xaml  LicenseDialog.xaml.cs
Helpers/: I18n.cs  Logger.cs  NodeGraphRenderer.cs  PortablePaths.cs
Models/: AppConfig.cs  ChatMessage.cs  ComfyProgress.cs  LicenseInfo.cs  LogEntry.cs  NodeDefinition.cs  WorkflowNode.cs
Pages/: ChatPage.xaml  ChatPage.xaml.cs  LogPage.xaml  LogPage.xaml.cs  NodeGraphPage.xaml  NodeGraphPage.xaml.cs  PreviewPage.xaml  PreviewPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs
Services/: AIManager.cs  CloudAIClient.cs  ComfyClient.cs  ComfyInstaller.cs  ComfyProcess.cs  ComfyWebSocketClient.cs  LicenseClient.cs  LicenseGuard.cs  MachineFingerprint.cs  NodeRegistry.cs  PromptBuilder.cs  WorkflowConverter.cs  WorkflowParser.cs
assets/i18n/: en.json  th.json
assets/prompts/: node_templates.json  workflow_system.txt
patches/: imgui-node-editor-compat.patch
scripts/: download_fonts.ps1  download_fonts.sh
src/: main.cpp
src/ai/: AIManager.cpp  AIManager.h  CloudAI.cpp  CloudAI.h  PromptBuilder.cpp  PromptBuilder.h  WorkflowParser.cpp  WorkflowParser.h
src/app/: Application.cpp  Application.h  Config.cpp  Config.h  PortablePaths.cpp  PortablePaths.h
src/comfyui/: ComfyClient.cpp  ComfyClient.h  ComfyInstaller.cpp  ComfyInstaller.h  ComfyProcess.cpp  ComfyProcess.h  ComfyWebSocket.cpp  ComfyWebSocket.h  NodeRegistry.cpp  NodeRegistry.h  WorkflowConverter.cpp  WorkflowConverter.h
src/i18n/: I18n.cpp  I18n.h  th.json
src/license/: LicenseClient.cpp  LicenseClient.h  LicenseGuard.cpp  LicenseGuard.h  MachineFingerprint.cpp  MachineFingerprint.h
src/ui/: MainWindow.cpp  MainWindow.h  Theme.cpp  Theme.h  UIManager.cpp  UIManager.h
src/utils/: FileUtils.cpp  FileUtils.h  Logger.h  StringUtils.cpp  StringUtils.h
